--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-Felix's GitHub page
+---
+layout: default
+---
+<h1> :thoughts => nil </h1>
+<ol>
+{% for post in site.posts %}
+  <li> <a href="{{ post.url }}">{{ post.title }}</a> <em>{{ post.date | date_to_string }}</em> </li>
+{% endfor %}
+</ol>
+
 
