--- a/alternate.html
+++ b/alternate.html
@@ -1,6 +1,18 @@
 ---
 layout: default
 ---
+<!-- Google Website Optimizer Tracking Script -->
+<script type="text/javascript">
+if(typeof(_gat)!='object')document.write('<sc'+'ript src="http'+
+(document.location.protocol=='https:'?'s://ssl':'://www')+
+'.google-analytics.com/ga.js"></sc'+'ript>')</script>
+<script type="text/javascript">
+try {
+var gwoTracker=_gat._getTracker("UA-3132426-2");
+gwoTracker._trackPageview("/0014237404/test");
+}catch(err){}</script>
+<!-- End of Google Website Optimizer Tracking Script -->
+
 <h1> :thoughts => nil </h1>
 <ul>
 {% for post in site.posts %}
