--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 <h1> :thoughts => nil </h1>
 <ol>
 {% for post in site.posts %}
-  <li> <a href="{{ post.url }}">{{ post.title }}</a> <em>{{ post.date | date_to_string }}</em> </li>
+  <li><em>{{ post.date | date_to_string }}</em> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>  </li>
 {% endfor %}
 </ol>
 
