--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 
-<h1> :thoughts => nil </h1>
+<h1> input, process, output </h1>
 <ol>
 {% for post in site.posts %}
   <li><em>{{ post.date | date_to_string }}</em> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>  </li>
